--- a/css/style_pc.css
+++ b/css/style_pc.css
@@ -1725,6 +1725,74 @@ body.store .description {
 }
 
 
+/* indoor.html */
+.indoor {
+  padding-top: 40px;
+}
+
+.indoor h3 {
+  margin-bottom: 20px;
+}
+
+.indoor__menu {
+  text-align: center;
+  margin-bottom: 52px;
+}
+
+.indoor__menu li a {
+  display: block;
+}
+
+.indoor__content ul {
+  display: none;
+}
+
+.indoor__content ul.visible {
+  display: block;
+}
+
+.indoor__content ul li {
+  display: inline-block;
+  width: 33%;
+  padding: 0 15px;
+  margin-bottom: 86px;
+  box-sizing: border-box;
+  vertical-align: top;
+}
+
+.indoor__content ul li a {
+  display: block;
+  cursor: url("../img/cursor_hand.png"), auto;
+}
+
+.indoor__content ul li a .image {
+  position: relative;
+}
+
+.indoor__content ul li a img {
+  transition: opacity .5s;
+}
+
+.indoor__content ul li a .image:hover img.front {
+  opacity: 0;
+}
+
+.indoor__content ul li a .image:hover img.back {
+  opacity: 1;
+}
+
+.indoor__content ul li a .image img.front {
+  position: absolute;
+  left: 0;
+  top: 0;
+  opacity: 1;
+}
+
+.outdoor__content ul li a .image img.back {
+  opacity: 0;
+}
+
+
 
 
 
