--- a/css/style_mobile.css
+++ b/css/style_mobile.css
@@ -663,18 +663,19 @@ body.sub .product__menu li:nth-child(6) {
   transform: rotate(-180deg);
 }
 
-#footer .info.open > div {
-  display: block;
-}
-
 #footer .info > div {
-  padding-top: 13px;
+  height: 0;
+  overflow: hidden;
   font-family: sans-serif;
   font-size: 13px;
   font-weight: 500;
   line-height: 1.7em;
   color: #666;
-  display: none;
+  transition: height .3s;
+}
+
+#footer .info > div .wrap {
+  padding-top: 13px;
 }
 
 #footer .info > div address {
