--- a/css/style_pc.css
+++ b/css/style_pc.css
@@ -1408,8 +1408,7 @@ body.store .description {
 
 .store .left .image {
   position: relative;
-  width: 50%;
-  min-width: 290px;
+  width: 300px;
 }
 
 .store .left .image img:first-child {
