--- a/css/style_mobile.css
+++ b/css/style_mobile.css
@@ -340,12 +340,14 @@ body.sub .product__menu li:nth-child(6) {
   top: 45px;
   width: 35px;
   height: 47px;
+  opacity: 0;
   background: url("../img/gnb_icon.svg") no-repeat top right/cover;
   transition: left .3s;
 }
 
 #gnb > ul > li.selected::before {
   left: -33px;
+  opacity: 1;
 }
 
 #gnb > ul > li {
@@ -385,18 +387,18 @@ body.sub .product__menu li:nth-child(6) {
   position: relative;
 }
 
-#gnb > ul > li .sub-menu li.selected span {
-  display: inline-block;
-  padding-bottom: 2px;
-  border-bottom: 2px solid #000;
-}
-
 #gnb > ul > li .sub-menu li a {
   padding: 12px 0;
   font-family: sans-serif;
   font-size: 16px;
   font-weight: 500;
   color: #000;
+}
+
+#gnb > ul > li .sub-menu li.selected span {
+  display: inline-block;
+  padding-bottom: 2px;
+  border-bottom: 2px solid #000;
 }
 
 #gnb > ul > li .sub-menu li a span {
