--- a/css/reset.css
+++ b/css/reset.css
@@ -1,3 +1,9 @@
+/* Google Fonts - Noto Sans KR */
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@400;500;700&display=swap');
+
+/* Google Fonts - Libre Baskerville */
+@import url('https://fonts.googleapis.com/css2?family=Libre+Baskerville:wght@400;700&display=swap');
+
 html {
   -webkit-text-size-adjust: none;
   text-size-adjust: none;
